policy binding.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: enforce-resource-requests-binding
spec:
  policyName: require-resource-requests
  validationActions: [ "Deny" ]
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - default
        - ns-c4e-dev
        - calico-system
        - kube-system
        - tigera-operator
        - dataprotection-microsoft
        - ns-platform-ingress-nginx
        - ns-platform-external-secrets
        - cloudability
