validating admission.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-resource-requests
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [ "" ]
      apiVersions: [ "v1" ]
      operations: [ "CREATE" ]
      resources: [ "pods" ]
  validations:
  - expression: >
      object.spec.containers.all(container, has(container.resources) && has(container.resources.requests) && has(container.resources.requests.cpu) && has(container.resources.requests.memory))
    message: "Your containers must have CPU and memory resource requests defined."
